WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186067
Fix a few issues in WKFullScreenViewController
https://bugs.webkit.org/show_bug.cgi?id=186067
Summary
Fix a few issues in WKFullScreenViewController
Jer Noble
Reported
2018-05-29 15:20:59 PDT
Fix a few issues in WKFullScreenViewController
Attachments
Patch
(2.02 KB, patch)
2018-05-29 15:23 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-05-29 15:21:35 PDT
<
rdar://problem/40630944
>
Jer Noble
Comment 2
2018-05-29 15:23:04 PDT
Created
attachment 341527
[details]
Patch
Darin Adler
Comment 3
2018-05-29 22:09:51 PDT
Comment on
attachment 341527
[details]
Patch No test coverage for either of these mistakes?
Jer Noble
Comment 4
2018-05-30 10:07:51 PDT
The "interface -> m_interface" bug was found during development of
bug #186063
, and this fix will be tested by the test that patch introduces.
WebKit Commit Bot
Comment 5
2018-05-30 10:46:55 PDT
Comment on
attachment 341527
[details]
Patch Clearing flags on attachment: 341527 Committed
r232299
: <
https://trac.webkit.org/changeset/232299
>
WebKit Commit Bot
Comment 6
2018-05-30 10:46:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug